Ensure bullet aligns with checkbox item.

--- a/stylesheets/markdown-preview.less
+++ b/stylesheets/markdown-preview.less
@@ -197,6 +197,10 @@
     li ul:first-of-type {
       margin-top: 0;
     }
+
+    li > :first-child {
+      vertical-align: top;
+    }
   }
 
   ul ul,
